syntax = "proto3";

package message;

option go_package = "./message";

message RequestMessage {
    string Type = 1;
    uint64  TargetId= 2;
    string IP = 3;
    map[uint64][]string Payload = 4;
}

message ResponseMessage {
    string Type = 1;
    uint64 Nodeid = 2;
    string IP = 3;
}